# memory-stream

./: .gitignore  ADMIN-TAURI-REFACTOR-REPORT.md  AGENT.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DESIGN-SPEC.md  FORGE-REPORT.md  MD保存与双向连接指南.md  Makefile  README.md  check_components.sh  check_webreader.sh  checkuishared.sh  docker-compose.yml
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: frontend-ui-ux-audit.md  review-report-comprehensive.md
.sisyphus/evidence/: t-s1-search.txt  task-a1-transitions.txt  task-a3-reduced-motion.txt  task-i1-import-parser.txt  task-p1-benchmark.txt  task-p1-race-test.txt  task-p2-auth-timeout.txt  task-p3-no-catch-any.txt  task-p4-shallowref.txt
.sisyphus/plans/: admin-decouple-and-ux.md  code-review-v34.md  dual-track-edge-engine.md  frontend-ui-ux-audit-report.md  industrial-altar.md  iteration-quality-features.md  jwt-proactive-refresh.md  space-refactor.md  sysconfig-singularity.md
docs/: DESIGN-SPEC.md
frontend-workspace/: AUDIT-VUE.md  package.json  pnpm-lock.yaml  vitest.config.ts
frontend-workspace/apps/admin-tauri/: .env.development  .env.example  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
frontend-workspace/apps/admin-tauri/src/: App.vue  main.ts  style.css
frontend-workspace/apps/admin-tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend-workspace/apps/admin-tauri/src-tauri/capabilities/: default.json
frontend-workspace/apps/admin-tauri/src-tauri/src/: api.rs  auth.rs  cache.rs  db.rs  draft.rs  draft_sync.rs  events.rs  export.rs  image.rs  lib.rs  main.rs  models.rs  protocol.rs  state.rs  toc.rs  vault_scanner.rs  vault_sync.rs  watcher.rs  wikilink_replacer.rs  ws_client.rs
frontend-workspace/apps/admin-tauri/src-tauri/src/commands/: auth.rs  glossary.rs  mod.rs  search.rs  sync.rs  vault.rs
frontend-workspace/apps/admin-tauri/src-tauri/src/config/: keyring_wrapper.rs  mod.rs
frontend-workspace/apps/admin-tauri/src-tauri/src/importer/: markdown.rs  mod.rs  zip_reader.rs
frontend-workspace/apps/admin-tauri/src/assets/: main.css
frontend-workspace/apps/reader-web/: index.html  package.json  tsconfig.json  vite.config.ts
frontend-workspace/apps/reader-web/src/: App.vue
frontend-workspace/apps/web-reader/: .env.android  .env.production  README.md  capacitor.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend-workspace/apps/web-reader/src/: App.vue  main.ts  style.css
go-server/: .env.example  .env.production  .gitignore  API.md  AUDIT-GO.md  README.md  go.mod  go.sum
go-server/cmd/api/: main.go
go-server/internal/errors/: errors.go  middleware.go
go-server/internal/handlers/: auth.go  auth_handler_test.go  card.go  category.go  category_handler_test.go  edge.go  edge_handler_test.go  glossary.go  graph.go  health.go  merge.go  search.go  search_test.go  sync.go  ws.go
go-server/internal/middleware/: auth.go  maxbody.go  ratelimit.go
go-server/internal/models/: card.go  category.go  glossary.go  relation.go  schema.go  sync.go  user.go
go-server/internal/pkg/logger/: logger.go  slow_query.go
go-server/internal/services/: auth.go  auth_test.go  card.go  card_pg_test.go  card_test.go  category.go  category_pg_test.go  category_test.go  edge.go  edge_pg_test.go  edge_test.go  glossary.go  graph.go  graph_test.go  merge.go  merge_pg_test.go  merge_test.go  search.go  search_integration_test.go  search_test.go  snippet_test.go  sync.go  testhelpers_pg_test.go
go-server/internal/storage/: pg.go  redis.go
go-server/internal/ws/: hub.go  hub_test.go  protocol.go  protocol_test.go
go-server/migration/: README.md
go-server/migration/sql/: 000_reset.sql  001_schema.sql  002_seed.sql  003_drop_unused_indexes.sql  003_sync_enhancements.sql  004_glossary.sql
reports/: code-audit-2026-04-14.md
rust-workspace/: Cargo.toml  README.md
rust-workspace/ast-core/: Cargo.toml
rust-workspace/ast-core/src/: error.rs  lib.rs  visitor.rs
rust-workspace/ast-gen/: Cargo.toml
rust-workspace/ast-gen/src/: main.rs
rust-workspace/ast-renderer/: Cargo.toml
rust-workspace/ast-renderer/src/: lib.rs
rust-workspace/image-compressor/: Cargo.toml
rust-workspace/image-compressor/src/: error.rs  lib.rs
rust-workspace/md-parser/: Cargo.toml
rust-workspace/md-parser/src/: lib.rs
rust-workspace/md-parser/tests/: wikilink_test.rs
rust-workspace/ms-ast/: Cargo.toml
rust-workspace/ms-ast/src/: document.rs  error.rs  lib.rs  node.rs  parser.rs  toc.rs  visitor.rs
rust-workspace/ms-graph/: Cargo.toml
rust-workspace/ms-graph/src/: error.rs  knowledge_graph.rs  lib.rs  model.rs
rust-workspace/ms-io/: Cargo.toml
rust-workspace/ms-io/src/: cloud.rs  error.rs  export.rs  fs.rs  lib.rs  media.rs  scanner.rs
rust-workspace/ms-kb-exporter/: Cargo.toml
rust-workspace/ms-kb-exporter/src/: error.rs  lib.rs
rust-workspace/ms-local-draft/: Cargo.toml
rust-workspace/ms-local-draft/src/: error.rs  lib.rs
rust-workspace/ms-meta/: Cargo.toml
rust-workspace/ms-meta/src/: db.rs  error.rs  fts.rs  lib.rs  repo.rs  schema.sql  types.rs
rust-workspace/ms-storage/: Cargo.toml
rust-workspace/ms-storage/src/: error.rs  lib.rs
rust-workspace/ms-toc-extractor/: Cargo.toml
rust-workspace/ms-toc-extractor/src/: lib.rs
rust-workspace/temple_cache/: Cargo.toml
rust-workspace/temple_cache/src/: document.rs  lib.rs  pool.rs  preheat.rs  watcher.rs
rust-workspace/temple_core/: Cargo.toml
rust-workspace/temple_core/src/: error.rs  lib.rs  prelude.rs  types.rs
rust-workspace/temple_graph/: Cargo.toml
rust-workspace/temple_graph/src/: backend.rs  graph.rs  layout.rs  lib.rs  types.rs
rust-workspace/temple_search/: Cargo.toml
rust-workspace/temple_search/src/: backend.rs  engine.rs  lib.rs  schema.rs  tantivy_backend.rs  tokenizer.rs  types.rs
rust-workspace/wasm-engine/: Cargo.toml
rust-workspace/wasm-engine/src/: lib.rs
scripts/: dev.ps1  dist.ps1  stop.ps1
(+194 files in other folders)
