[workspace]
members = [
  "ast-core",
  "md-parser",
  "ast-renderer",
  "wasm-engine",
  "ast-gen",
  "ms-toc-extractor",
  "image-compressor",
  "ms-local-draft",
  "ms-storage",
  "ms-kb-exporter",
  "temple_core",
  "temple_cache",
  "temple_graph",
  "temple_search",
]

resolver = "2"

[workspace.dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0"
tokio = {version = "1", features = ["rt", "sync", "macros", "io-util"]}
