[workspace]
members = [
  "ast-core",
  "md-parser",
  "ast-renderer",
  "wasm-engine",
  "ast-gen",
  "ms-toc-extractor",
  "image-compressor",
  "ms-local-draft",
  "ms-storage",
  "ms-kb-exporter",
  "temple_core",
  "temple_cache",
  "temple_graph",
  "temple_search",
]

resolver = "2"

# WASM 体积优化 profile（wasm-engine 继承）
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[workspace.dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0"
tokio = {version = "1", features = ["rt", "sync", "macros", "io-util"]}
