[workspace]
members = [
  "ms-ast",
  "ms-io",
  "ms-graph",
  "ms-meta",
]

resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[workspace.dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0"
tokio = {version = "1", features = ["rt", "sync", "macros", "io-util"]}
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
