[package]
name = "image-compressor"
version = "0.1.0"
edition = "2021"

[features]
default = ["native"]
native = ["dep:tokio", "dep:image", "dep:webp"]

[dependencies]
image = { version = "0.25", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
webp = { version = "0.3", optional = true }
