[package]
name = "ms-ast"
version = "0.1.0"
edition = "2021"

[features]
default = ["parser", "toc"]
parser = ["dep:pulldown-cmark", "dep:regex"]
toc = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
pulldown-cmark = { version = "0.12", optional = true }
regex = { version = "1", optional = true }
