[package]
name = "ms-io"
version = "0.1.0"
edition = "2021"

[features]
default = ["native"]
native = ["export", "media"]
storage = ["dep:tokio", "dep:rust-s3"]
export = ["dep:tokio", "dep:zip", "dep:futures"]
media = ["dep:tokio", "dep:image", "dep:webp"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
walkdir = "2"
tokio = { workspace = true, optional = true }
rust-s3 = { version = "0.34", optional = true }
zip = { version = "2", optional = true }
futures = { version = "0.3", optional = true }
image = { version = "0.25", optional = true }
webp = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"
