[package]
name = "ms-kb-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
zip = "8"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
