[package]
name = "ms-kb-exporter"
version = "0.1.0"
edition = "2021"

[features]
default = ["native"]
native = ["dep:tokio", "dep:zip", "dep:futures"]

[dependencies]
futures = { version = "0.3", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
zip = { version = "8", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
