[package]
edition = "2021"
name = "ms-local-draft"
version = "0.1.0"

[features]
default = ["native"]
native = ["dep:tokio", "dep:rusqlite", "dep:chrono", "dep:parking_lot"]

[dependencies]
chrono = { version = "0.4", optional = true }
parking_lot = { version = "0.12", optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
