[package]
edition = "2021"
name = "wasm-engine"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ast-core = {path = "../ast-core"}
ast-renderer = {path = "../ast-renderer"}
md-parser = {path = "../md-parser"}
ms-toc-extractor = {path = "../ms-toc-extractor"}
serde_json = {workspace = true}
wasm-bindgen = "0.2"
