[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "admin-tauri"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "admin_tauri_lib"

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
gray_matter = {version = "0.3", features = ["yaml"] }
ms-ast = {path = "../../../../rust-workspace/ms-ast", features = ["parser", "toc"] }
ms-graph = {path = "../../../../rust-workspace/ms-graph"}
ms-io = {path = "../../../../rust-workspace/ms-io", features = ["storage", "media"] }
ms-meta = {path = "../../../../rust-workspace/ms-meta"}
notify = "7"
reqwest = {version = "0.12", features = ["json"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
keyring = "2"
tauri = {version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
uuid = {version = "1", features = ["v4"] }
